--- a/packages/discordeno/package.json
+++ b/packages/discordeno/package.json
@@ -22,9 +22,9 @@
     "lint": "biome lint --write",
     "test:unit-coverage": "c8 mocha --no-warnings 'tests/**/*.spec.ts'",
     "test:unit": "c8 --r lcov mocha --no-warnings 'tests/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js discordeno",
-    "test:deno-unit": "swc --strip-leading-paths tests --delete-dir-on-start --out-dir denoTestsDist && node ../../scripts/fixDenoTestExtension.js && deno test -A --import-map ../../denoImportMap.json denoTestsDist",
-    "test:bun-unit": "node ../../scripts/fixBunTestExtension.js && bun test bunTestsDist",
     "test:unit:watch": "mocha --no-warnings --watch --parallel 'tests/**/*.spec.ts'",
+    "test:deno-unit": "deno -A ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/**/*.spec.ts'",
+    "test:bun-unit": "bun ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/**/*.spec.ts'",
     "test:type": "tsc --noEmit",
     "test:test-type": "tsc --project tests/tsconfig.json"
   },
@@ -44,7 +44,7 @@
     "@types/node": "^22.10.2",
     "c8": "^10.1.2",
     "chai": "^5.1.2",
-    "mocha": "^10.8.2",
+    "mocha": "patch:mocha@npm%3A10.8.2#~/.yarn/patches/mocha-npm-10.8.2-4295e5e50b.patch",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "typescript": "^5.7.2"
