--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -22,8 +22,9 @@
     "lint": "biome lint --write",
     "test:unit-coverage": "c8 mocha --no-warnings 'tests/unit/**/*.spec.ts'",
     "test:unit": "c8 --r lcov mocha --no-warnings 'tests/unit/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js gateway",
-    "test:deno-unit": "swc --strip-leading-paths tests --delete-dir-on-start --out-dir denoTestsDist && node ../../scripts/fixDenoTestExtension.js && deno test -A --import-map ../../denoImportMap.json denoTestsDist/unit",
     "test:unit:watch": "mocha --no-warnings --watch --parallel 'tests/unit/**/*.spec.ts'",
+    "test:deno-unit": "deno -A ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/unit/**/*.spec.ts'",
+    "test:bun-unit": "bun ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/unit/**/*.spec.ts'",
     "test:integration": "c8 --r lcov mocha --no-warnings 'tests/integration/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js gateway",
     "test:type": "tsc --noEmit",
     "test:test-type": "tsc --project tests/tsconfig.json"
@@ -47,7 +48,7 @@
     "@types/ws": "^8.5.13",
     "c8": "^10.1.2",
     "chai": "^5.1.2",
-    "mocha": "^10.8.2",
+    "mocha": "patch:mocha@npm%3A10.8.2#~/.yarn/patches/mocha-npm-10.8.2-4295e5e50b.patch",
     "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
