--- a/.github/workflows/other-runtime-unit-test.yml
+++ b/.github/workflows/other-runtime-unit-test.yml
@@ -53,7 +53,7 @@ jobs:
           node-version: 18
       - uses: oven-sh/setup-bun@v2
         with:
-          bun-version: '1.1.x'
+          bun-version: '1.1.42'
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
