ci: Use mocha for both deno and bun (#4067)
* Use mocha for both deno and bun

* Use any Bun 1.1

* remove build:type dependency in lib-check.yml

* Pin point 1.1.42

* remove packages/bot/.mocharc.json

--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -22,10 +22,10 @@
     "lint": "biome lint --write",
     "test:unit-coverage": "c8 mocha --no-warnings 'tests/unit/**/*.spec.ts'",
     "test:unit": "c8 --r lcov mocha --no-warnings 'tests/unit/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js rest",
-    "test:deno-unit": "swc tests --strip-leading-paths --delete-dir-on-start --out-dir denoTestsDist && node ../../scripts/fixDenoTestExtension.js && deno test -A --import-map ../../denoImportMap.json denoTestsDist/unit",
-    "test:bun-unit": "node ../../scripts/fixBunTestExtension.js && bun test bunTestsDist/unit",
-    "test:e2e": "c8 --r lcov mocha --exit --no-warnings --jobs 1 --t 30000 'tests/e2e/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js rest",
     "test:unit:watch": "mocha --no-warnings --watch --parallel 'tests/unit/**/*.spec.ts'",
+    "test:deno-unit": "deno -A ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/unit/**/*.spec.ts'",
+    "test:bun-unit": "bun ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/unit/**/*.spec.ts'",
+    "test:e2e": "c8 --r lcov mocha --exit --no-warnings --jobs 1 --t 30000 'tests/e2e/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js rest",
     "test:type": "tsc --noEmit",
     "test:test-type": "tsc --project tests/tsconfig.json"
   },
@@ -46,7 +46,7 @@
     "chai": "^5.1.2",
     "chai-as-promised": "^8.0.1",
     "dotenv": "^16.4.7",
-    "mocha": "^11.0.1",
+    "mocha": "patch:mocha@npm%3A11.0.2#~/.yarn/patches/mocha-npm-11.0.2-b5d6b95284.patch",
     "sinon": "^19.0.2",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
