--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -22,8 +22,9 @@
     "lint": "biome lint --write",
     "test:unit-coverage": "c8 mocha --no-warnings 'tests/**/*.spec.ts'",
     "test:unit": "c8 --r lcov mocha --no-warnings 'tests/**/*.spec.ts' && node ../../scripts/coveragePathFixing.js utils",
-    "test:deno-unit": "swc tests --strip-leading-paths --delete-dir-on-start -C jsc.minify.mangle=false --out-dir denoTestsDist && node ../../scripts/fixDenoTestExtension.js && deno test -A --import-map ../../denoImportMap.json denoTestsDist",
     "test:unit:watch": "mocha --no-warnings --watch --parallel 'tests/**/*.spec.ts'",
+    "test:deno-unit": "deno -A ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/**/*.spec.ts'",
+    "test:bun-unit": "bun ../../node_modules/mocha/bin/mocha.js --config ../../.mocharc.base.cjs 'tests/**/*.spec.ts'",
     "test:type": "tsc --noEmit"
   },
   "devDependencies": {
@@ -33,7 +34,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.10.3",
     "c8": "^10.1.3",
-    "mocha": "^11.0.1",
+    "mocha": "patch:mocha@npm%3A11.0.2#~/.yarn/patches/mocha-npm-11.0.2-b5d6b95284.patch",
     "ts-node": "^10.9.2",
     "tsconfig": "*",
     "typescript": "^5.7.2"
