--- a/examples/bigbot/.yarnrc.yml
+++ b/examples/bigbot/.yarnrc.yml
@@ -1,4 +1,2 @@
-# This file is needed or else when yarn runs in `docker build` will attempt to use PnP
-compressionLevel: mixed
-enableGlobalCache: false
+# This file is needed or else when yarn runs it will attempt to use PnP
 nodeLinker: node-modules
