--- a/.github/workflows/lib-check.yml
+++ b/.github/workflows/lib-check.yml
@@ -18,15 +18,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v4
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          cache: yarn
       - run: yarn install --immutable
       - name: Turbo Cache
         id: turbo-cache
@@ -34,7 +26,7 @@ jobs:
         with:
           path: .turbo
           key: ${{ runner.os }}-turbo-build:type-${{ github.sha }}
-      - name: Build Type and Test
+      - name: Build Types
         run: yarn build:type --cache-dir=".turbo"
 
   build-dist:
@@ -45,15 +37,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v4
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          cache: yarn
       - run: yarn install --immutable
       - name: Turbo Cache
         id: turbo-cache
@@ -64,8 +48,8 @@ jobs:
       - name: Type Test
         run: yarn build --cache-dir=".turbo"
 
-  format-unit-and-integration-test:
-    name: Format Test
+  format-tests:
+    name: Format Tests
     runs-on: ubuntu-latest
     needs: build-type-and-test
     steps:
@@ -73,15 +57,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v4
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          cache: yarn
       - run: yarn install --immutable
       - name: Turbo Cache
         id: turbo-cache
@@ -99,7 +75,7 @@ jobs:
         run: yarn lint --cache-dir=".turbo"
 
   test-type-unit-and-integration-test:
-    name: Test Type Test
+    name: Typecheck Tests
     runs-on: ubuntu-latest
     needs: build-type-and-test
     steps:
@@ -107,15 +83,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn config get cacheFolder)" >> $GITHUB_OUTPUT
-      - uses: actions/cache@v4
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-yarn-
+          cache: yarn
       - run: yarn install --immutable
       - name: Turbo Cache
         id: turbo-cache
