--- a/.github/workflows/lib-check.yml
+++ b/.github/workflows/lib-check.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build-type-and-test:
-    name: Build Type and Test
+    name: Build Types
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -48,8 +48,8 @@ jobs:
       - name: Type Test
         run: yarn build --cache-dir=".turbo"
 
-  format-tests:
-    name: Format Tests
+  format:
+    name: Format
     runs-on: ubuntu-latest
     needs: build-type-and-test
     steps:
