--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,6 @@
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+    "editor.defaultFormatter": "biomejs.biome"
   }
 }
