Update docusaurus to v3.8, improve performance
Docusaurus:
- Update to v3.8.0
- Enable new faster features, rspack bundler cache and worker threads
- Update CI to cache rspack bundler cache
- Update dependencies to latest versions
- Update blog posts to use the truncate tag
- Update caniuse-lite

Removed duplicated type documentation generation for bot package

--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -38,6 +38,13 @@ jobs:
         run: yarn build:doc
       - run: yarn install --immutable
         working-directory: ./website
+      - name: Restore bundler cache
+        uses: actions/cache@v4
+        with:
+          key: ${{ runner.os }}-docusaurus-bundler-${{ github.sha }}
+          path: ./website/node_modules/.cache
+          restore-keys: |
+            ${{ runner.os }}-docusaurus-bundler-
       - name: Build website
         run: yarn build
         working-directory: ./website
