--- a/website/package.json
+++ b/website/package.json
@@ -14,35 +14,34 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "typecheck": "tsc",
     "lint": "biome lint --write",
-    "format": "biome format --write",
-    "setup-dd": ""
+    "format": "biome format --write"
   },
   "dependencies": {
-    "@docusaurus/core": "3.6.3",
-    "@docusaurus/faster": "^3.6.3",
-    "@docusaurus/plugin-client-redirects": "^3.6.3",
-    "@docusaurus/plugin-content-docs": "^3.6.3",
-    "@docusaurus/preset-classic": "3.6.3",
-    "@docusaurus/theme-common": "3.6.3",
-    "@easyops-cn/docusaurus-search-local": "^0.45.0",
+    "@docusaurus/core": "^3.8.0",
+    "@docusaurus/faster": "^3.8.0",
+    "@docusaurus/plugin-client-redirects": "^3.8.0",
+    "@docusaurus/plugin-content-docs": "^3.8.0",
+    "@docusaurus/preset-classic": "^3.8.0",
+    "@docusaurus/theme-common": "^3.8.0",
+    "@easyops-cn/docusaurus-search-local": "^0.49.2",
     "@mdx-js/react": "^3.1.0",
-    "chart.js": "^4.4.6",
+    "chart.js": "^4.4.9",
     "clsx": "^2.1.1",
-    "prism-react-renderer": "^2.4.0",
+    "prism-react-renderer": "^2.4.1",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "reactflow": "^11.11.4",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@docusaurus/module-type-aliases": "3.6.3",
-    "@docusaurus/tsconfig": "3.6.3",
-    "@docusaurus/types": "3.6.3",
-    "@types/react": "^18.3.12",
-    "typescript": "5.7.2",
-    "webpack": "5.99.5"
+    "@docusaurus/module-type-aliases": "^3.8.0",
+    "@docusaurus/tsconfig": "^3.8.0",
+    "@docusaurus/types": "^3.8.0",
+    "@types/react": "^18.3.23",
+    "typescript": "5.8.3",
+    "webpack": "5.99.9"
   },
   "browserslist": {
     "production": [
