Use .jsonc files for typedoc And use the readme option instead of a custom script

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@ node_modules
 website/.yarn
 
 website/api_reference/generated/**/*.md
+!website/api_reference/generated/_media/README.md
 
 # testing
 coverage
