--- a/typedoc.jsonc
+++ b/typedoc.jsonc
@@ -3,6 +3,7 @@
   "entryPointStrategy": "packages",
   "entryPoints": ["packages/bot", "packages/gateway", "packages/rest", "packages/types", "packages/utils"],
   "out": "./website/api_reference/generated",
+  "readme": "./website/api_reference/generated/_media/README.md",
   "cleanOutputDir": false,
   "plugin": ["typedoc-plugin-markdown"],
   "commentStyle": "all",
