--- a/docker-apps/rest-passthrough/Dockerfile
+++ b/docker-apps/rest-passthrough/Dockerfile
@@ -1,15 +1,5 @@
-# we node 18 alpine 3.19 as base image
-# we use multi stage build in this file
-
-# deps
-#   contain all dependencies including dev dependencies
-# builder
-#   contains all compiled files
-# runner
-#   the final image, with only the dependencies and compiled files
-
 # build only with the platform of the host machine, since it only uses for dev purposes
-FROM --platform=$BUILDPLATFORM node:18.20.4-alpine3.20 AS deps
+FROM --platform=$BUILDPLATFORM node:20-alpine AS deps
 WORKDIR /app
 # copy necessary for install dependencies
 COPY package.json yarn.lock .yarnrc.yml ./
@@ -18,7 +8,7 @@ COPY ./.yarn/releases  ./.yarn/releases
 RUN yarn install --immutable
 
 # build only with the platform of the host machine, since we just need its files
-FROM --platform=$BUILDPLATFORM node:18.20.4-alpine3.20 AS builder
+FROM --platform=$BUILDPLATFORM node:20-alpine AS builder
 # copy the dependencies (node_modules) from the deps image
 COPY --from=deps /app /app
 WORKDIR /app
@@ -29,7 +19,7 @@ COPY .swcrc ./
 # compile the files
 RUN yarn build
 
-FROM node:18.20.4-alpine3.20 AS runner
+FROM node:20-alpine AS runner
 # copy the compiled files from the builder image
 COPY --from=builder /app/dist /app/dist
 # copy the dependencies from the deps image
