--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@discordeno/gateway",
   "version": "21.0.0",
-  "main": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    "types": "./dist/types/index.d.ts",
-    "import": "./dist/esm/index.js",
-    "require": "./dist/cjs/index.cjs"
+    "types": "./dist/index.d.ts",
+    "import": "./dist/index.js"
   },
   "type": "module",
   "license": "Apache-2.0",
@@ -19,8 +18,8 @@
     "!dist/.tsbuildinfo"
   ],
   "scripts": {
-    "build": "swc src --strip-leading-paths --delete-dir-on-start src --out-dir dist/esm && swc --strip-leading-paths --delete-dir-on-start src --out-dir dist/cjs -C module.type=commonjs && node ../../scripts/fixCjsExtension.js",
-    "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist/types",
+    "build": "swc src --strip-leading-paths --delete-dir-on-start src --out-dir dist",
+    "build:type": "tsc --declaration --emitDeclarationOnly --declarationDir dist",
     "release-build": "yarn build && yarn build:type",
     "fmt": "biome format --write",
     "lint": "biome lint --write",
