update package.json(s) to allow for require(esm)

--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -2,12 +2,7 @@
   "name": "benchmarks",
   "version": "0.0.0",
   "private": true,
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "exports": {
-    "import": "./dist/index.js",
-    "types": "./dist/index.d.ts"
-  },
+  "exports": "./dist/index.js",
   "type": "module",
   "license": "Apache-2.0",
   "repository": {
