--- a/packages/rest/package.json
+++ b/packages/rest/package.json
@@ -38,7 +38,7 @@
     "@discordeno/utils": "workspace:^"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.1.1",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.12.9",
     "@types/chai": "^5.2.2",
