--- a/website/package.json
+++ b/website/package.json
@@ -35,7 +35,7 @@
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.1.1",
     "@docusaurus/module-type-aliases": "^3.8.0",
     "@docusaurus/tsconfig": "^3.8.0",
     "@docusaurus/types": "^3.8.0",
