build(dev-deps): Update biome to v2 (#4246)
* update biome to v2

* Run biome check --write

* Update biome.jsonc

Co-authored-by: Link <lts20050703@gmail.com>

* Fix config error

* Bump biome version

* Update website/yarn.lock

* Update biome to 2.1.3

---------

Co-authored-by: Link <lts20050703@gmail.com>

--- a/packages/gateway/package.json
+++ b/packages/gateway/package.json
@@ -42,7 +42,7 @@
     "fzstd": "^0.1.1"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.1.3",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.13.3",
     "@types/chai": "^5.2.2",
