--- a/packages/benchmarks/package.json
+++ b/packages/benchmarks/package.json
@@ -32,7 +32,7 @@
     "benchmark": "^2.1.4"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.1.3",
     "@swc/cli": "^0.5.2",
     "@swc/core": "^1.13.3",
     "@types/benchmark": "^2.1.5",
