--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -9,6 +9,7 @@ on:
       - 'docker-apps/rest-passthrough/**'
   pull_request:
   merge_group:
+  workflow_dispatch:
   schedule:
     - cron: '0 0 * * *'
 
@@ -38,8 +39,7 @@ jobs:
     outputs:
       version: ${{ steps.package-version.outputs.current-version }}
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
       - name: get-npm-version
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
@@ -90,6 +90,7 @@ jobs:
     name: Image scan
     runs-on: ubuntu-latest
     needs: build
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == '' }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
@@ -101,19 +102,9 @@ jobs:
           path: /tmp
       - name: Load Docker image
         run: docker load --input /tmp/rest-passthrough-image.tar
+
       - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
-        with:
-          image-ref: 'discordeno/app-rest-passthrough:latest'
-          format: 'table'
-          exit-code: '0'
-          ignore-unfixed: true
-          vuln-type: 'os,library'
-          severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
+        uses: aquasecurity/trivy-action@0.32.0
         with:
           image-ref: 'discordeno/app-rest-passthrough:latest'
           exit-code: '0'
@@ -123,14 +114,13 @@ jobs:
           output: 'trivy-results.sarif'
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
-        if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
         with:
           sarif_file: 'trivy-results.sarif'
+          category: 'trivy'
 
       - name: Run Snyk to check Docker image for vulnerabilities
-        if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
         continue-on-error: true
-        uses: snyk/actions/docker@master
+        uses: snyk/actions/docker@0.4.0
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
@@ -138,15 +128,14 @@ jobs:
           args: --file=docker-apps/rest-passthrough/Dockerfile
       # Snyk will use a security-severify of "null" when the CVE didn't get an assigned score
       - name: Replace security-severity null for non assigned CVE scores
-        if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
         run: |
           sed -i 's/"security-severity": "null"/"security-severity": "0"/g' snyk.sarif
           sed -i 's/"cvssv3_baseScore": null/"cvssv3_baseScore": 0/g' snyk.sarif
       - name: Upload snyk scan results to GitHub Security tab
-        if: ${{ github.event_name == 'schedule' || github.event_name == 'push' }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: snyk.sarif
+          category: 'snyk'
 
   build-all-arch:
     name: Build image for all architectures
