--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -90,7 +90,7 @@ jobs:
     name: Image scan
     runs-on: ubuntu-latest
     needs: build
-    if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == '' }}
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
     steps:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
