--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -86,8 +86,8 @@ jobs:
           name: rest-passthrough-image
           path: /tmp/rest-passthrough-image.tar
 
-  image-scan:
-    name: Image scan
+  image-scan-trivy:
+    name: Image scan Trivy
     runs-on: ubuntu-latest
     needs: build
     if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
@@ -118,6 +118,23 @@ jobs:
           sarif_file: 'trivy-results.sarif'
           category: 'trivy'
 
+  image-scan-snyk:
+    name: Image scan Snyk
+    runs-on: ubuntu-latest
+    needs: build
+    if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: rest-passthrough-image
+          path: /tmp
+      - name: Load Docker image
+        run: docker load --input /tmp/rest-passthrough-image.tar
+
       - name: Run Snyk to check Docker image for vulnerabilities
         continue-on-error: true
         uses: snyk/actions/docker@0.4.0
@@ -126,7 +143,7 @@ jobs:
         with:
           image: 'discordeno/app-rest-passthrough:latest'
           args: --file=docker-apps/rest-passthrough/Dockerfile
-      # Snyk will use a security-severify of "null" when the CVE didn't get an assigned score
+      # Snyk will use a security-severity of "null" when the CVE didn't get an assigned score
       - name: Replace security-severity null for non assigned CVE scores
         run: |
           sed -i 's/"security-severity": "null"/"security-severity": "0"/g' snyk.sarif
