--- a/.github/workflows/docker-app-rest-passthrough.yml
+++ b/.github/workflows/docker-app-rest-passthrough.yml
@@ -86,8 +86,8 @@ jobs:
           name: rest-passthrough-image
           path: /tmp/rest-passthrough-image.tar
 
-  image-scan-trivy:
-    name: Image scan Trivy
+  image-scan:
+    name: Image scan
     runs-on: ubuntu-latest
     needs: build
     if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
@@ -112,28 +112,6 @@ jobs:
           severity: 'UNKNOWN,LOW,MEDIUM,HIGH,CRITICAL'
           format: 'sarif'
           output: 'trivy-results.sarif'
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
-          category: 'trivy'
-
-  image-scan-snyk:
-    name: Image scan Snyk
-    runs-on: ubuntu-latest
-    needs: build
-    if: ${{ github.event_name == 'schedule' || github.event_name == 'push' || github.event_name == 'workflow_dispatch' }}
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Download artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: rest-passthrough-image
-          path: /tmp
-      - name: Load Docker image
-        run: docker load --input /tmp/rest-passthrough-image.tar
 
       - name: Run Snyk to check Docker image for vulnerabilities
         continue-on-error: true
@@ -143,16 +121,22 @@ jobs:
         with:
           image: 'discordeno/app-rest-passthrough:latest'
           args: --file=docker-apps/rest-passthrough/Dockerfile
-      # Snyk will use a security-severity of "null" when the CVE didn't get an assigned score
-      # - name: Replace security-severity null for non assigned CVE scores
-      #   run: |
-      #     sed -i 's/"security-severity": "null"/"security-severity": "0"/g' snyk.sarif
-      #     sed -i 's/"cvssv3_baseScore": null/"cvssv3_baseScore": 0/g' snyk.sarif
+      # Snyk will use a security-severify of "null" when the CVE didn't get an assigned score
+      - name: Replace security-severity null for non assigned CVE scores
+        run: |
+          sed -i 's/"security-severity": "null"/"security-severity": "0"/g' snyk.sarif
+          sed -i 's/"cvssv3_baseScore": null/"cvssv3_baseScore": 0/g' snyk.sarif
+
+      - name: Place both sarif files in a directory
+        run: |
+          mkdir sarif-files
+          mv 'trivy-results.sarif' sarif-files
+          mv snyk.sarif sarif-files
+
       - name: Upload snyk scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: 'snyk.sarif'
-          category: 'snyk'
+          sarif_file: sarif-files
 
   build-all-arch:
     name: Build image for all architectures
